More basic structures

--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "connect": "*",
     "mongoose": "*",
     "socket.io": "*",
-    "async": "*"
+    "async": "*",
+    "forms": "*",
+    "express-resource": "*"
   }
 }
